--- a/kantuun_blog/hugo.toml
+++ b/kantuun_blog/hugo.toml
@@ -1,6 +1,6 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://spacepakal.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'KanTuun'
 theme= "PaperMod"
 [params]
   social = true
