--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 	path = kantuun_blog/themes/hermit-v2
 	url = https://github.com/1bl4z3r/hermit-V2
 	branch = main
+[submodule "kantuun_blog/themes/PaperMod"]
+	path = kantuun_blog/themes/PaperMod
+	url = https://github.com/adityatelange/hugo-PaperMod.git
