--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,9 @@
 [submodule "kantuun_blog/themes/PaperMod"]
 	path = kantuun_blog/themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "kantuun_blog/themes/mini"]
+	path = kantuun_blog/themes/mini
+	url = https://github.com/nodejh/hugo-theme-mini.git
+[submodule "kantuun_blog/themes/nostyle"]
+	path = kantuun_blog/themes/nostyle
+	url = https://github.com/hanwenguo/hugo-theme-nostyleplease.git
